# oscillator

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/bar/: mod.rs
src/keyboard/: keymod.rs  keysymdef.rs  mod.rs
src/layout_manager/: mod.rs
src/oscillator/: mod.rs
src/setting/: mod.rs
src/utils/: color.rs  font.rs
src/window_manager/: mod.rs
src/x11/: mod.rs
