[package]
name = "oscillator"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
config = "0.9"
dirs = "1.0.4"
serde = "1.0.87"
serde_derive = "1.0.87"
env_logger = "0.6.0"
log = "0.4.6"

[dependencies.xcb]
version = "0.8"
features = ["randr"]